force-app/main/default/objects/Automation_Event__c/Automation_Event__c.object-meta.xml
<CustomObject>
    <label>Automation Event</label>
    <nameField>
        <displayFormat>AE-{0000000000}</displayFormat>
        <label>MC Automation Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automation Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>