force-app/main/default/objects/Automation_Event__c/fields/Action_Result__c.field-meta.xml
<CustomField>
    <fullName>Action_Result__c</fullName>
    <label>Action Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>