force-app/main/default/objects/Automation_Event__c/fields/Action_Status__c.field-meta.xml
<CustomField>
    <fullName>Action_Status__c</fullName>
    <label>Action Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>