force-app/main/default/objects/Automation_Event__c/fields/Job_Execution_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Execution_Id__c</fullName>
    <label>Job Execution Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>