force-app/main/default/objects/Automation_Event__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <label>Automation Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>