force-app/main/default/objects/Automation_Event__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>This field contains information required by Submit User Stories Action.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>