force-app/main/default/objects/Automation_Event__c/fields/Pipeline_Id__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Id__c</fullName>
    <label>Pipeline Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>