force-app/main/default/objects/Automation_Event__c/fields/Target_Action_Number__c.field-meta.xml
<CustomField>
    <fullName>Target_Action_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Target Actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>